fix overflowing code boxes

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ nav {
 }
 
 main {
+  min-width: 0;
   max-width: 50em;
   margin-left: 2em;
   margin-right: 2em;
@@ -28,6 +29,16 @@ main {
 
 h2, h3 {
   margin-bottom: 0em;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+pre {
+  overflow-x: auto;
+  max-width: 100%;
 }
 
 a {
@@ -46,10 +57,6 @@ a {
 }
 
 .object-list > li { margin-bottom: 1ex; }
-
-img {
-  width: 50%; /* or a specific width */
-}
 
 .container {
   text-align: center;
